--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
+group = 'com.example.bookclub'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '15'
 
 configurations {
@@ -44,6 +46,9 @@ dependencies {
 
 	// Spring Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// Mustache for Front-end
+	compile 'org.springframework.boot:spring-boot-starter-mustache'
 
 	// Spring Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
