--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,20 @@
 spring:
+
+  # Live Reload
   devtools:
     livereload:
       enabled: true
+
+  # Mustache Cache
   mustache:
     cache:
       false
+
+  # H2 Repository Location
+  datasource:
+    url: jdbc:h2:~/data/bookclub
+
+  # Spring Jpa ddl
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
