--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+
+	// Spring Email
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 application {
