이메일 설정 빈을 개선하라
기존에 이메일 빈 안에 필요 이상의 설정이 많았습니다.

SES 관련 설정은 필요 없고 Gmail SMTP만사용하면 됩니다.

따라서, Gmail 전송을 위한 필수 설정만 남기도록 개선하였습니다.

참고
[Guide to Spring Email](https://www.baeldung.com/spring-email)

--- a/lombok.config
+++ b/lombok.config
@@ -1,6 +1,6 @@
 lombok.Setter.flagUsage = error
 lombok.AllArgsConstructor.flagUsage = error
-lombok.RequiredConstructor.flagUsage = error
+lombok.requiredArgsConstructor.flagUsage = error
 lombok.data.flagUsage= error
 
 config.stopBubbling = true
