--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,19 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+
+  #Spring Email
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: melon975123@gmail.com
+    password:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+        transport:
+          protocol: smtp
+        debug: true
