프런트에 사용자 수정 요청을 추가하라
수정에는 아이디가 필요하므로 화면에 아이디를 추가합니다.
또한 수정버튼 클릭 시, 비동기로 수정을 요청하도록 추가합니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   # Spring Jpa ddl
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
 
   #Spring Email
   mail:
