--- a/build.gradle
+++ b/build.gradle
@@ -55,8 +55,15 @@ dependencies {
 
 	// Spring Data JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	//H2 Database
 	runtimeOnly 'com.h2database:h2'
+
+	//MariaDB
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
+
+	//Hibernate-java8
+	implementation 'org.hibernate.orm:hibernate-java8'
 
 	// Spring Developer Tools
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
