스터디 생성 프런트 화면을 추가하라
스터디를 생성하는 프런트 화면을 추가합니다.
현재는 모두 입력하도록 되어있지만 ENUM 값은 셀렉트박스로 개선해야
합니다.

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
 
 	//Hibernate-java8
-	implementation 'org.hibernate.orm:hibernate-java8'
+	implementation 'org.hibernate.orm:hibernate-java8:6.0.0.Alpha7'
 
 	// Spring Developer Tools
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
