베스트셀러 목록 조회를 추가하라
인터파크 api를 통해 베스트셀러 목록을 조회하도록 추가합니다.

--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,9 @@ dependencies {
 
 	// Spring Email
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	//Spring Boot Configuration Processor
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
 
 application {
