베스트셀러 목록 조회가 json을 리턴하도록 개선하라
기존에 베스트셀러 목록은 string으로 리턴하였습니다.

프런트화면에서 필드를 사용하기 위해 json을 리턴하도록 합니다.

--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ dependencies {
 
 	//Spring Boot Configuration Processor
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+	//Json Simple
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 application {
