JJWT 토큰 생성과 테스트를 리팩토링 하라
JJWT토큰을 만들기 위해 아이디, 메일, 종료시간을 설정합니다.
토큰 생성 유틸을 통해 토큰생성을 하고 테스트를 개선하도록
리팩토링하였습니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,5 +35,8 @@ spring:
           protocol: smtp
         debug: true
 
+jwt:
+  secret: "12345678901234567890123456789010"
+
 interpark:
   apikey:
