--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: melon975123@gmail.com
-    password:
+    password: 496752tjdrb!
     properties:
       mail:
         smtp:
