롬볼 setter 설정을 추가하라
롬복에서 setter를 사용하지 못하도록 설정을 추가합니다.

--- a/lombok.config
+++ b/lombok.config
@@ -1,4 +1,4 @@
-#lombok.Setter.flagUsage = error
+lombok.Setter.flagUsage = error
 lombok.AllArgsConstructor.flagUsage = error
 lombok.requiredArgsConstructor.flagUsage = error
 lombok.data.flagUsage= error
