--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,15 @@ dependencies {
 
 	//Json Simple
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+
+	//Apache Commons
+	implementation 'commons-io:commons-io:2.8.0'
+
+	//Apache Commons Lang3
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+	//Commons FileUpload
+	implementation 'commons-fileupload:commons-fileupload:1.4'
 }
 
 application {
