--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
 
 	//Commons FileUpload
 	implementation 'commons-fileupload:commons-fileupload:1.4'
+
+	//Jsoup
+	implementation 'org.jsoup:jsoup:1.13.1'
 }
 
 application {
