s3를 이용한 이미지 저장, 삭제를 추가하라
사용자 이미지를 aws s3에 저장합니다 또한 수정 시, 기존에 있는 이미지는
삭제하도록 추가합니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,15 +11,19 @@ group = 'com.example.bookclub'
 sourceCompatibility = '11'
 
 configurations {
-	developmentOnly
-	runtimeClasspath {
-		extendsFrom developmentOnly
+//	developmentOnly
+//	runtimeClasspath {
+//		extendsFrom developmentOnly
+//	}
+	compileOnly {
+		extendsFrom annotationProcessor
 	}
 }
 
 repositories {
 	// Use JCenter for resolving dependencies.
-	jcenter()
+//	jcenter()
+	mavenCentral()
 }
 
 dependencies {
@@ -81,7 +85,7 @@ dependencies {
 
 	// Spring Boot Test
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		//exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 
 	// Spring Email
@@ -104,6 +108,9 @@ dependencies {
 
 	//Jsoup
 	implementation 'org.jsoup:jsoup:1.13.1'
+
+	//Spring Cloud for S3 Upload
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws-context', version: '2.2.1.RELEASE'
 }
 
 application {
