--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'org.projectlombok:lombok:1.18.20'
+
 	// Use JUnit Jupiter API for testing.
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
 
