--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,10 @@ group = 'com.example.bookclub'
 sourceCompatibility = '11'
 
 configurations {
-//	developmentOnly
-//	runtimeClasspath {
-//		extendsFrom developmentOnly
-//	}
+	all {
+		compile.exclude module: 'spring-boot-starter-logging'
+	}
+
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
@@ -113,7 +113,13 @@ dependencies {
 	implementation 'org.jsoup:jsoup:1.13.1'
 
 	//Spring Cloud for S3 Upload
-	implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws-context', version: '2.2.1.RELEASE'
+	implementation 'org.springframework.cloud:spring-cloud-aws-context:2.2.1.RELEASE'
+
+	//Log4j2
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.6.1'
+
+	//Log4j2 application.yml
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.6.1'
 }
 
 application {
