--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ sourceCompatibility = '11'
 configurations {
 	all {
 		compile.exclude module: 'spring-boot-starter-logging'
+//		exclude group: 'org.springframework.boot', modlue: 'spring-boot-starter-logging'
 	}
 
 	compileOnly {
@@ -118,8 +119,11 @@ dependencies {
 	//Log4j2
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.6.1'
 
+	//Log4j2 Web
+	implementation 'org.apache.logging.log4j:log4j-web:2.16.0'
+
 	//Log4j2 application.yml
-	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.6.1'
+//	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.6.1'
 }
 
 application {
