--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,8 +122,8 @@ dependencies {
 	//Log4j2 Web
 	implementation 'org.apache.logging.log4j:log4j-web:2.16.0'
 
-	//Log4j2 application.yml
-//	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.6.1'
+	//AOP
+	implementation 'org.springframework.boot:spring-boot-starter-aop:2.6.1'
 }
 
 application {
