redis 의존성을 추가하라
gradle 의존성에 redis를 추가합니다 start-data-redis를 통해 간단히
설정으로 사용할 수 있도록 합니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,9 @@ dependencies {
 
 	//Querydsl
 	implementation 'com.querydsl:querydsl-jpa'
+
+	//Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.6.3'
 }
 
 application {
