--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,33 @@ plugins {
 
 	//Querydsl
 	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
+
+	//Spring Rest Docs
+	id "org.asciidoctor.convert" version "1.5.9.2"
 }
 
 group = 'com.example.bookclub'
 sourceCompatibility = '11'
+
+ext {
+	snippetsDir = file('build/generated-snippets')
+}
+
+test {
+	outputs.dir snippetsDir
+}
+
+asciidoctor {
+	inputs.dir snippetsDir
+	dependsOn test
+}
+
+bootJar {
+	dependsOn asciidoctor
+	from ("${asciidoctor.outputDir}/html5") {
+		into 'static/docs'
+	}
+}
 
 configurations {
 	all {
@@ -133,6 +156,12 @@ dependencies {
 
 	//Redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.6.3'
+
+	//Asciidoctor
+	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+
+	//Rest Docs Mockmvc
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
 application {
