계정 요청 rest docs 추가
계정 요청에 rest docs를 추가합니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,21 @@ bootJar {
 	}
 }
 
+task copyDocument(type: Copy) {
+	dependsOn asciidoctor
+
+	from file("build/asciidoc/html5/")
+	into file("src/main/resources/static/docs")
+}
+
+build {
+	dependsOn copyDocument
+}
+
 configurations {
 	all {
 		compile.exclude module: 'spring-boot-starter-logging'
-//		exclude group: 'org.springframework.boot', modlue: 'spring-boot-starter-logging'
+//		exclude group: 'org.springframework.boot', modulue: 'spring-boot-starter-logging'
 	}
 
 	compileOnly {
