--- a/app/build.gradle
+++ b/app/build.gradle
@@ -176,6 +176,12 @@ dependencies {
 
 	//Rest Docs Mockmvc
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+	// MySQL
+	implementation 'mysql:mysql-connector-java:8.0.16'
+
+	//Spring Boot Starter Jdbc
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 }
 
 application {
