설정 파일 정보를 암호화하라
설정 파일을 github 배포에서 사용하려면 publicㅇ로 전환시켜야 하므로
민감한 내용들을 암호화하도록 합니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -182,6 +182,9 @@ dependencies {
 
 	//Spring Boot Starter Jdbc
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
+	//Jasypt Spring Boot Starter
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
 }
 
 application {
