--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
     #database-platform: org.hibernate.dialect.H2Dialect
     generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 
     # Query show
     show-sql: true
