elastic search 의존성을 추가하라
elastic search 의존성을 추가합니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -185,6 +185,10 @@ dependencies {
 
 	//Jasypt Spring Boot Starter
 	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
+
+	// Elastic Search Starter
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+
 }
 
 application {
