--- a/app/build.gradle
+++ b/app/build.gradle
@@ -189,6 +189,8 @@ dependencies {
 	// Elastic Search Starter
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 
+	// AMQP & RabbitMQ Starter
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 }
 
 application {
