rabbitmq 계정정보, 포트번호를 추가하라
rabbitmq의 계정정보, 포트번호를 추가합니다

--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -50,6 +50,12 @@ spring:
       hosts: localhost
       port: 9200
 
+  rebbitmq:
+    host: localhost
+    username: guest
+    password: guest
+    port:15672
+
   mail:
     username: ENC(/qNjHfAouomFQW84ddaVlwSyuuBwMnqvIQdsY5EHeCs=)
     password: ENC(108QkIuAdhSx2x4QIBI8A9GuNVwmxSh7)
