게시글 도메인에 생성날짜를 추가하라
게시글 도메인에 생성날짜를 추가합니다

--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -56,6 +56,9 @@ spring:
     password: guest
     port: 5672
 
+  main:
+    allow-bean-definition-overriding: true
+
   mail:
     username: ENC(/qNjHfAouomFQW84ddaVlwSyuuBwMnqvIQdsY5EHeCs=)
     password: ENC(108QkIuAdhSx2x4QIBI8A9GuNVwmxSh7)
