스터디 요청에서 LocalTime의 역직렬화를 개선하라
스터디 요청에서 LocalTime 역직렬화가 가능하도록 의존성과 설정을
추가합니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -191,6 +191,9 @@ dependencies {
 
 	// AMQP & RabbitMQ Starter
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
+	// Jackson DataType
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 }
 
 application {
