sentry 의존성과 설정을 추가하라
sentry를 logback으로 의존성과 설정을 추가합니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -194,6 +194,9 @@ dependencies {
 
 	// Jackson DataType
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
+	//Sentry Log
+	implementation 'io.sentry:sentry-spring-boot-starter:5.7.4'
 }
 
 application {
