--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -21,10 +21,14 @@ spring:
       enabled: true
 
   datasource:
-      url: jdbc:h2:file:~/dev/temp/h2db/bookclub
-      driverClassName: org.h2.Driver
-      username: sa
-      password:
+      #url: jdbc:h2:file:~/dev/temp/h2db/bookclub
+      #driverClassName: org.h2.Driver
+      #username: sa
+      #password:
+    url: jdbc:postgresql://34.85.16.173:5432/bookclub
+    driverClassName: org.postgresql.Driver
+    username: admin
+    password: admin
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
@@ -47,7 +51,7 @@ spring:
         max-page-size: 2000
 
     elasticsearch:
-      hosts: localhost
+      hosts: 10.178.0.2,10.178.0.3,10.178.0.4,10.178.0.5
       port: 9200
 
   rebbitmq:
