application.yml의 설정을 변경하라
실제로 사용하는 외부 클라우드 주소로 변경합니다

--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -54,7 +54,7 @@ spring:
       hosts: 10.178.0.2,10.178.0.3,10.178.0.4,10.178.0.5
       port: 9200
 
-  rebbitmq:
+  rabbitmq:
     host: localhost
     username: guest
     password: guest
