데이터베이스릉 mysql로 전환하라
데이터베이스를 mysql로 전환합니다

--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -21,17 +21,14 @@ spring:
       enabled: true
 
   datasource:
-      #url: jdbc:h2:file:~/dev/temp/h2db/bookclub
-      #driverClassName: org.h2.Driver
-      #username: sa
-      #password:
-    url: jdbc:postgresql://34.85.16.173:5432/bookclub
-    driverClassName: org.postgresql.Driver
-    username: admin
-    password: admin
+    url: jdbc:mysql://34.85.16.173:3306/bookclub?serverTimezone=UTC&characterEncoding=UTF-8
+    jdbc-url: jdbc:mysql://34.85.16.173:3306/bookclub?serverTimezone=UTC&characterEncoding=UTF-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 1234
 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     generate-ddl: true
     hibernate:
       ddl-auto: update
