로그인 세션을 Redis로 개선하라
로그인 세션을 Redis로 개선합니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -200,6 +200,9 @@ dependencies {
 
 	//Postgresql
 	implementation 'org.postgresql:postgresql:42.3.3'
+
+	// Redis Session
+	implementation 'org.springframework.session:spring-session-data-redis:2.7.0'
 }
 
 application {
