--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -19,11 +19,26 @@ spring:
       enabled: true
     restart:
       enabled: true
+#  datasource:
+#    url: jdbc:h2:file:~/dev/temp/h2db/bookclub
+#    driverClassName: org.h2.Driver
+#    username: sa
+#    password:
   datasource:
-    url: jdbc:h2:file:~/dev/temp/h2db/bookclub
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    hikari:
+      write:
+        url: jdbc:mysql://34.125.215.241:3306/bookclub?serverTimezone=UTC&characterEncoding=UTF-8
+        jdbc-url: jdbc:mysql://34.125.215.241:3306/bookclub?serverTimezone=UTC&characterEncoding=UTF-8
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        username: bookroot
+        password: 1234
+
+      read:
+        url: jdbc:mysql://34.125.215.241:3306/bookclub?serverTimezone=UTC&characterEncoding=UTF-8
+          jdbc-url: jdbc:mysql://34.125.215.241:3306/bookclub?serverTimezone=UTC&characterEncoding=UTF-8
+          driver-class-name: com.mysql.cj.jdbc.Driver
+          username: bookroot
+          password: 1234
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
@@ -114,6 +129,13 @@ image:
 
 logging:
   config: classpath:log4j2.xml
+  level:
+    org:
+      hibernate:
+        SQL: debug
+        type: trace
+          descriptor:
+            sql: trace
 
 jasypt:
   key: ENC(Ma5/uTJf8gChwHgjSmo9HemMwEJfQqxq)
