--- a/app/build.gradle
+++ b/app/build.gradle
@@ -206,6 +206,9 @@ dependencies {
 
 	// Spring Boot Starter Cache
 	implementation 'org.springframework.boot:spring-boot-starter-cache:2.7.0'
+
+	// Hibernate EntityManager
+	implementation'org.hibernate:hibernate-entitymanager'
 }
 
 application {
