--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,3 +1,20 @@
 spring:
-  profiles:
-    active: dev
+  config:
+    activate:
+      on-profile: dev
+
+  datasource:
+    hikari:
+      read:
+        #url: jdbc:h2:tcp://localhost/~/bookclub
+        jdbc-url: jdbc:h2:tcp://localhost/~/bookclub
+        driver-class-name: org.h2.Driver
+        username: sa
+        password:
+
+      write:
+        #url: jdbc:h2:tcp://localhost/~/jdbc
+        jdbc-url: jdbc:h2:tcp://localhost/~/bookclub
+        driver-class-name: org.h2.Driver
+        username: sa
+        password:
