--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -12,8 +12,12 @@ spring:
       filter:
         enabled: true
   redis:
-    host: localhost
-    port: 6379
+    cache:
+      host: localhost
+      port: 6379
+    session:
+      host: localhost
+      port: 6380
   devtools:
     livereload:
       enabled: true
