[#114] OSIV 설정을 false로 수정하라
성능 개선을 위해서 OSIV를 fasle로 수정합니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -209,6 +209,10 @@ dependencies {
 
 	// Hibernate EntityManager
 	implementation'org.hibernate:hibernate-entitymanager'
+
+	// Spring Security Test
+	testImplementation 'org.springframework.security:spring-security-test'
+
 }
 
 application {
