--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -58,6 +58,7 @@ spring:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 100
+    open-in-view: false
 
 #  jpa:
 #    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
